--- a/elderly-care-backend/package.json
+++ b/elderly-care-backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elderly-care-backend",
-  "version": "1.0.0",
-  "description": "Backend para monitoreo de adultos mayores",
+  "version": "2.0.0",
+  "description": "Backend para monitoreo de adultos mayores con sistema SOS",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -10,9 +10,10 @@
     "node": "18.x"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.0"
   }
 }
